--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
   "host_permissions": ["https://mail.google.com/"],
   "permissions": ["tabs", "storage", "alarms"],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "type":"module"
   },
   "action": {},
   "icons": {
